--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,7 +22,13 @@ body {
 }
 
 .text-section {
-    font-size: 35px;
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.inner-header{
+    margin-top: 40px;
+    font-size: 40px;
     font-weight: 600;
 }
 
@@ -68,9 +74,6 @@ body {
         font-weight: bold;
     }
 
-    .pharse-animated{
-    }
-
     h1{
         text-align: center;
         margin-bottom: 20px;
@@ -98,14 +101,19 @@ body {
             border-radius: 50%;
             border: 11px solid #4073A3;
         }
-    }
 
-    p{
-        display: block;
-        width: 1000px;
-        font-size: 30px;
-        word-wrap: wrap;
-        font-weight: 300;
+        .about-text{
+            margin-top: -40px;
+            width: 70%;
+
+            p{
+                margin-top: 40px;
+                display: block;
+                font-size: 25px;
+                word-wrap: wrap;
+                font-weight: 300;
+            }
+        }
     }
 }
 
@@ -121,14 +129,52 @@ body {
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(3, 1fr);
         justify-items: center;
-        gap: 170px 0px;
+        gap: 15px 0px;
 
         .grid-skills-item{
             img{
-                width: 100px;
-                height: 100px;
+                width: 100%;
+                height: 60%;
                 margin: auto;
+            }
+
+            span{
+                display: block;
+                text-align: center;
+                margin-top: 20px;
+                font-size: 20px;
+                font-weight: 300;
             }
         }
     }
+    
+    p {
+        margin-top: 40px;
+        font-size: 20px;
+        font-weight: 400;
+        width: 85%;
+    }
+}
+
+.work-section{
+    margin-top: 200px;
+    margin-left: 175px; 
+
+    .work-showcase{    
+        display: block;
+        
+        .work{
+            margin-top: 150px;
+            display: flex;
+            text-align: center;
+            flex-direction: row;
+            justify-content: center;
+
+            h4{
+                font-size: 30px;
+                font-weight: 400;
+            }
+        }
+    }
+
 }
