--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,7 +67,7 @@ body {
         height: 100%;
         gap: 67px;
         li{
-            font-size: 25px;
+            font-size: 20px;
             font-weight: 400;
         
             a{
@@ -106,21 +106,25 @@ body {
     }
 }
 
+.section{
+    margin-top: 200px;
+    text-align: center;
+}
+
 .about-section{
-    margin-left: 175px;
     flex-direction: column;
 
     .about-wrapper{
         margin-top: 100px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: flex-start;
         align-items: center;
         gap: 50px;
 
         img{
-            width: 350px;
-            height: 350px;
+            width: 250px;
+            height: 250px;
             border-radius: 50%;
             border: 11px solid #4073A3;
         }
@@ -132,7 +136,7 @@ body {
             p{
                 margin-top: 40px;
                 display: block;
-                font-size: 25px;
+                font-size: 20px;
                 word-wrap: wrap;
                 font-weight: 300;
             }
@@ -142,22 +146,23 @@ body {
 
 
 .skills-section{
-    margin-top: 200px;
-    margin-left: 175px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 
     .grid-skills{
         margin-top: 100px;
-        margin-right: 200px;
         display: grid;
-        grid-template-columns: repeat(6, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(3, 1fr);
         justify-items: center;
         gap: 15px 0px;
 
         .grid-skills-item{
             img{
-                width: 100%;
-                height: 60%;
+                width: 50px;
+                height: 50px;
                 margin: auto;
             }
 
@@ -180,21 +185,21 @@ body {
 }
 
 .work-section{
-    margin-top: 200px;
-    margin-left: 175px; 
-
-    width: 85%;
-
     .work-showcase{    
         display: block;
         
+        .work:nth-child(2){
+            flex-direction: column-reverse;
+        }
+
         .work{
             margin-top: 120px;
             display: flex;
             text-align: center;
-            flex-direction: row;
-            gap: 50px;
-            
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+
             img {
                 width: 469px;
                 height: 550px;
@@ -220,7 +225,7 @@ body {
     
                 p {
                     width: 100%;
-                    text-align: left;
+                    text-align: center;
                     margin-top: 20px;
                     font-size: 20px;
                     font-weight: 400;
@@ -229,12 +234,14 @@ body {
             }
         }
     }
-
+    p{
+        margin-top: 40px;
+        font-size: 20px;
+        font-weight: 400;
+    }
 }
 
 .contact-section {
-    margin-top: 200px;
-    margin-left: 175px; 
     margin-bottom: 200px;
 
     .contact-container {
@@ -301,5 +308,68 @@ footer{
         padding-top: 10px;
         font-size: 15px;
         font-weight: bold;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    .navbar{
+        .menu-navbar{
+            ul{
+                li{
+                    font-size: 25px;
+                }
+            }
+        }
+    }
+
+    .section{
+        margin-left: 175px;
+        text-align: unset;
+    }
+
+    .about-section{
+        .about-wrapper{
+            flex-direction: row;
+            img{
+                width: 350px;
+                height: 350px;
+            }
+            .about.text{
+                p{
+                    font-size: 25px;
+                }
+            }
+        }
+    }
+    .skills-section{
+        display: block ;
+        text-align: unset;
+        .grid-skills{
+            grid-template-columns: repeat(6, 1fr);
+            margin-right: 250px ;
+        }
+        .grid-skills-item{
+            img{
+                width: 100px !important;
+                height: 100px !important;
+            }
+            span{
+                font-size: 25px;
+            }
+        }
+    }
+
+    .work-section{
+        .work-showcase{     
+            .work{
+                flex-direction: row !important;
+                .work-text{
+                    p{
+                        text-align: left;
+                    }
+                }
+            }
+        }
     }
 }
