--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,399 +1,409 @@
-@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Quicksand:wght@300;400;500;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300&family=Quicksand:wght@300;400;500  ;600;700&display=swap');
 
-$work-frames-color: #FB2576, #D7BB27, #85ED7C;
+    $work-frames-color: #FB2576, #D7BB27, #85ED7C;
 
-@keyframes text-animation-exit{
-    0% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-    90%{
-        opacity: 0;
-        transform: translateY(30px);
-    }
-}
-
-@keyframes icon-animation-growth-color{
-    0%{
-        transform: scale(0);
-        opacity: 0;
-    }
-    100%{
-        transform: scale(1);
-        opacity: 1;
-    }
-}
-
-body {
-    background-color: #000000;
-    color: #ffffff;
-    font-family: "Quicksand", sans-serif !important;
-}
-
-.btn {
-    font-family: "Quicksand", sans-serif !important;
-    margin-top: 40px;
-    font-size: 25px;
-    font-weight: 600;
-    height: 45px;
-    width: 170px;
-    cursor: pointer;
-}
-
-.text-section {
-    font-size: 25px;
-    font-weight: 400;
-}
-
-.inner-header{
-    margin-top: 40px;
-    font-size: 40px;
-    font-weight: 600;
-}
-
-.menu-navbar{
-    position: sticky;
-    top: 0;
-    width: 100%;
-    height: 100px;
-    ul{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        gap: 67px;
-        li{
-            font-size: 20px;
-            font-weight: 400;
-        
-            a{
-                color: #ffffff;
-                text-decoration: underline 3px rgba(251, 35, 118,0);
-                text-underline-offset: 10px;
-                transition: text-decoration-color 0.7s;
-
-                &:hover{
-                    text-decoration-color: rgba(251, 35, 118,1);
-                }
-            }
+    @keyframes text-animation-exit{
+        0% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+        100%{
+            opacity: 0;
+            transform: translateY(30px);
         }
     }
-}
 
-.text-animator {
-    display: block;
-    height: 400px;
-    
-    .main-wrapper{
-        display: block;
-        margin-top: 200px;
-        
-        h1{
-            text-align: center;
-            margin-bottom: 20px;
-            margin-left: auto;
-            font-size: 60px;
-            font-weight: 300;
+    @keyframes text-animation-enter{
+        0% {
+            opacity: 0;
+            transform: translateY(30px);
         }
-        .highlight{
-            font-weight: bold;
-        }
-
-        .lock-text{
-            position: absolute;
-        }
-
-        .pharse-animated{
-            display: inline-block;
-            animation: text-animation-exit 3.5s infinite ease-in-out;
+        100%{
+            opacity: 0;
+            transform: translateY(0px);
         }
     }
-}
 
-.section{
-    margin-top: 200px;
-    text-align: center;
-}
-
-.about-section{
-    flex-direction: column;
-
-    .about-wrapper{
-        margin-top: 100px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 50px;
-
-        img{
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            border: 11px solid #4073A3;
+    @keyframes icon-animation-growth-color{
+        0%{
+            transform: scale(0);
+            opacity: 0;
         }
-
-        .about-text{
-            margin-top: -40px;
-            width: 70%;
-
-            p{
-                margin-top: 40px;
-                display: block;
-                font-size: 20px;
-                word-wrap: wrap;
-                font-weight: 300;
-            }
-        }
-
-        .about-resume{
-            margin-top: 40px;
-            a{
-                text-decoration: none;
-                color: white;
-            }
-            span{
-                margin-right: 20px;
-            }
+        100%{
+            transform: scale(1);
+            opacity: 1;
         }
     }
-}
 
-
-.skills-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-
-    .grid-skills{
-        margin-top: 100px;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        justify-items: center;
-        gap: 15px 0px;
-
-        .grid-skills-item{
-            img{
-                width: 50px;
-                height: 50px;
-                margin: auto;
-            }
-
-            span{
-                display: block;
-                text-align: center;
-                margin-top: 20px;
-                font-size: 20px;
-                font-weight: 300;
-            }
-        }
+    body {
+        background-color: #000000;
+        color: #ffffff;
+        font-family: "Quicksand", sans-serif !important;
     }
-    
-    p {
+
+    .btn {
+        font-family: "Quicksand", sans-serif !important;
         margin-top: 40px;
-        font-size: 20px;
-        font-weight: 400;
-        width: 85%;
+        font-size: 25px;
+        font-weight: 600;
+        height: 45px;
+        width: 170px;
+        cursor: pointer;
     }
-}
 
-.work-section{
-    .work-showcase{    
-        display: block;
-        
-        .work:nth-child(2){
-            flex-direction: column-reverse;
-        }
+    .text-section {
+        font-size: 25px;
+        font-weight: 400;
+    }
 
-        .work{
-            margin-top: 120px;
+    .inner-header{
+        margin-top: 40px;
+        font-size: 40px;
+        font-weight: 600;
+    }
+
+    .menu-navbar{
+        position: sticky;
+        top: 0;
+        width: 100%;
+        height: 100px;
+        ul{
             display: flex;
-            text-align: center;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            gap: 20px;
-
-            img {
-                width: 469px;
-                height: 550px;
-
-                @for $i from 1 through length($work-frames-color) {
-                    &:nth-child(#{$i}) {
-                        border: 8px solid nth($work-frames-color, $i);
-                    }
-                }
-            }
-
-            .work-text{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                width: 60%;
-
-                h4{
-                    font-size: 40px;
-                    font-weight: 400;
-                }
-    
-                p {
-                    width: 100%;
-                    text-align: center;
-                    margin-top: 20px;
-                    font-size: 20px;
-                    font-weight: 400;
-                    line-height: 40px;
-                } 
-            }
-        }
-    }
-    p{
-        margin-top: 40px;
-        font-size: 20px;
-        font-weight: 400;
-    }
-}
-
-.contact-section {
-    margin-bottom: 200px;
-
-    .contact-container {
-        
-        .contact-form{
-            .input-form {
-                margin-top: 40px;
-                width: 78%;
-                height: 50px;
+            height: 100%;
+            gap: 67px;
+            li{
                 font-size: 20px;
                 font-weight: 400;
-                border: none;
-                border-bottom: 2px solid #ffffff;
-                background-color: transparent;
-                color: #ffffff;
-                outline: none;
-                transition: border-bottom-color 0.7s;
-                font-family: "Quicksand", sans-serif !important;
-    
-                &:placeholder{
-                    color: rgba(255,255,255,0.7)
-                }
-                &:focus{
-                    border-bottom-color: #FB2576;
-                }
-            }    
             
-            textarea{
-                resize: none;
-            }
-        }
+                a{
+                    color: #ffffff;
+                    text-decoration: underline 3px rgba(251, 35, 118,0);
+                    text-underline-offset: 10px;
+                    transition: text-decoration-color 0.7s;
 
-        .social-media{
-            a{
-                svg{
-                    margin-top: 10px;
-                    width: 50px;
-                    height: 50px;
-                    cursor: pointer;    
-                    transition: all .2s ease-in-out;
-    
                     &:hover{
-                        fill: #FB2576;
-                        transform: scale(1.2);
+                        text-decoration-color: rgba(251, 35, 118,1);
                     }
                 }
             }
         }
     }
-}
 
-footer{
-    display: block;
-    background-color: #D9D9D9;
-    color: black;
-    text-align: center;
-    height: 30px;
+    .text-animator {
+        display: block;
+        height: 400px;
+        
+        .main-wrapper{
+            display: block;
+            margin-top: 200px;;
+            
+            h1{
+                text-align: center;
+                margin-bottom: 20px;
+                margin-left: auto;
+                font-size: 60px;
+                font-weight: 300;
+            }
+            .highlight{
+                font-weight: bold;
+            }
 
-    p {
-        padding-top: 10px;
-        font-size: 15px;
-        font-weight: bold;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-
-    .navbar{
-        .menu-navbar{
-            ul{
-                li{
-                    font-size: 25px;
-                }
+            .pharse-animated{
+                display: inline-block;
+                width: 500px;
+                text-align: left;
+                animation: text-animation-exit 2s infinite;
+                animation-delay: 1s;
             }
         }
     }
 
     .section{
-        margin-left: 175px;
-        text-align: unset;
+        margin-top: 200px;
+        text-align: center;
     }
 
     .about-section{
+        flex-direction: column;
+
         .about-wrapper{
-            flex-direction: row;
+            margin-top: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 50px;
+
             img{
-                width: 350px;
-                height: 350px;
+                width: 250px;
+                height: 250px;
+                border-radius: 50%;
+                border: 11px solid #4073A3;
             }
+
             .about-text{
+                margin-top: -40px;
+                width: 70%;
+
                 p{
-                    font-size: 25px;
+                    margin-top: 40px;
+                    display: block;
+                    font-size: 20px;
+                    word-wrap: wrap;
+                    font-weight: 300;
                 }
             }
 
             .about-resume{
-                text-align: center;
-                font-size: 20px;
-            }
-        }
-    }
-    .skills-section{
-        display: block ;
-        text-align: unset;
-        .grid-skills{
-            grid-template-columns: repeat(6, 1fr);
-            margin-right: 250px ;
-        }
-        .grid-skills-item{
-            img{
-                width: 100px !important;
-                height: 100px !important;
-            }
-            span{
-                font-size: 25px;
+                margin-top: 40px;
+                a{
+                    text-decoration: none;
+                    color: white;
+                }
+                span{
+                    margin-right: 20px;
+                }
             }
         }
     }
 
+
+    .skills-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+
+        .grid-skills{
+            margin-top: 100px;
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            justify-items: center;
+            gap: 15px 0px;
+
+            .grid-skills-item{
+                img{
+                    width: 50px;
+                    height: 50px;
+                    margin: auto;
+                }
+
+                span{
+                    display: block;
+                    text-align: center;
+                    margin-top: 20px;
+                    font-size: 20px;
+                    font-weight: 300;
+                }
+            }
+        }
+        
+        p {
+            margin-top: 40px;
+            font-size: 20px;
+            font-weight: 400;
+            width: 85%;
+        }
+    }
+
     .work-section{
-        .work-showcase{     
+        .work-showcase{    
+            display: block;
+            
+            .work:nth-child(2){
+                flex-direction: column-reverse;
+            }
+
             .work{
-                flex-direction: row !important;
+                margin-top: 120px;
+                display: flex;
+                text-align: center;
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+
+                img {
+                    width: 469px;
+                    height: 550px;
+
+                    @for $i from 1 through length($work-frames-color) {
+                        &:nth-child(#{$i}) {
+                            border: 8px solid nth($work-frames-color, $i);
+                        }
+                    }
+                }
+
                 .work-text{
-                    p{
-                        text-align: left;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    width: 60%;
+
+                    h4{
+                        font-size: 40px;
+                        font-weight: 400;
+                    }
+        
+                    p {
+                        width: 100%;
+                        text-align: center;
+                        margin-top: 20px;
+                        font-size: 20px;
+                        font-weight: 400;
+                        line-height: 40px;
+                    } 
+                }
+            }
+        }
+        p{
+            margin-top: 40px;
+            font-size: 20px;
+            font-weight: 400;
+        }
+    }
+
+    .contact-section {
+        margin-bottom: 200px;
+
+        .contact-container {
+            
+            .contact-form{
+                .input-form {
+                    margin-top: 40px;
+                    width: 78%;
+                    height: 50px;
+                    font-size: 20px;
+                    font-weight: 400;
+                    border: none;
+                    border-bottom: 2px solid #ffffff;
+                    background-color: transparent;
+                    color: #ffffff;
+                    outline: none;
+                    transition: border-bottom-color 0.7s;
+                    font-family: "Quicksand", sans-serif !important;
+        
+                    &:placeholder{
+                        color: rgba(255,255,255,0.7)
+                    }
+                    &:focus{
+                        border-bottom-color: #FB2576;
+                    }
+                }    
+                
+                textarea{
+                    resize: none;
+                }
+            }
+
+            .social-media{
+                a{
+                    svg{
+                        margin-top: 10px;
+                        width: 50px;
+                        height: 50px;
+                        cursor: pointer;    
+                        transition: all .2s ease-in-out;
+        
+                        &:hover{
+                            fill: #FB2576;
+                            transform: scale(1.2);
+                        }
                     }
                 }
             }
         }
     }
 
-    .contact-section{
-        .contact-container{
-            .btn{
-                margin-left: calc(50% - 180px);
+    footer{
+        display: block;
+        background-color: #D9D9D9;
+        color: black;
+        text-align: center;
+        height: 30px;
+
+        p {
+            padding-top: 10px;
+            font-size: 15px;
+            font-weight: bold;
+        }
+    }
+
+    @media screen and (min-width: 1024px) {
+
+        .navbar{
+            .menu-navbar{
+                ul{
+                    li{
+                        font-size: 25px;
+                    }
+                }
+            }
+        }
+
+        .section{
+            margin-left: 175px;
+            text-align: unset;
+        }
+
+        .about-section{
+            .about-wrapper{
+                flex-direction: row;
+                img{
+                    width: 350px;
+                    height: 350px;
+                }
+                .about-text{
+                    p{
+                        font-size: 25px;
+                    }
+                }
+
+                .about-resume{
+                    text-align: center;
+                    font-size: 20px;
+                }
+            }
+        }
+        .skills-section{
+            display: block ;
+            text-align: unset;
+            .grid-skills{
+                grid-template-columns: repeat(6, 1fr);
+                margin-right: 250px ;
+            }
+            .grid-skills-item{
+                img{
+                    width: 100px !important;
+                    height: 100px !important;
+                }
+                span{
+                    font-size: 25px;
+                }
+            }
+        }
+
+        .work-section{
+            .work-showcase{     
+                .work{
+                    flex-direction: row !important;
+                    .work-text{
+                        p{
+                            text-align: left;
+                        }
+                    }
+                }
+            }
+        }
+
+        .contact-section{
+            .contact-container{
+                .btn{
+                    margin-left: calc(50% - 180px);
+                }
             }
         }
     }
-}
