--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,17 +13,6 @@ $work-frames-color: #FB2576, #D7BB27, #85ED7C;
     }
 }
 
-@keyframes text-animation-enter{
-    0% {
-        opacity: 0;
-        transform: translateY(30px);
-    }
-    100%{
-        opacity: 0;
-        transform: translateY(0px);
-    }
-}
-
 @keyframes icon-animation-growth-color{
     0%{
         transform: scale(0);
@@ -33,6 +22,40 @@ $work-frames-color: #FB2576, #D7BB27, #85ED7C;
         transform: scale(1);
         opacity: 1;
     }
+}
+
+@keyframes image-work-animation{
+    0%{
+        opacity: 0;
+        transform: translateX(0px) translateY(-50%) rotate(0deg) scale(0);
+    }
+    50%{
+        opacity: 0.5;
+        transform: translateX(65px) translateY(-50%) rotate(360deg) scale(1.5);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(60px) translateY(-50%) rotate(0deg) scale(1);
+    }
+}
+
+@keyframes image-send-email-animation{
+    0%{
+        opacity: 0;
+        transform: translateX(0px) translateY(-50%) rotate(0deg) scale(0);
+    }
+    50%{
+        opacity: 0.5;
+        transform: translateX(65px) translateY(-50%) rotate(360deg) scale(1.5);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(60px) translateY(-50%) rotate(0deg) scale(1);
+    }
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 body {
@@ -48,7 +71,34 @@ body {
     font-weight: 600;
     height: 45px;
     width: 170px;
+    border-radius: 10px;
+    transition: all 0.5s;
     cursor: pointer;
+
+    .btn-image{
+        width: 25px !important;
+        height: 25px !important;
+        visibility: hidden;
+        display: block;
+        opacity: 1;
+        position: absolute;
+        left: 70px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    
+    span{
+        position: relative;
+        z-index: 1;
+    }
+
+    
+    &:hover{
+        .btn-image{
+            animation: image-work-animation 1.5s ease-out forwards;
+            visibility: visible;
+        }
+    }
 }
 
 .text-section {
@@ -164,6 +214,13 @@ nav{
                 visibility: hidden;
                 display: block;
                 margin-right: 20px;
+                transition: all 300ms ease-in-out;
+
+                &:hover{
+                    color: #FB2576;
+                    transition: all 300ms ease-in-out;
+                    transform: scale(1.1);
+                }
             }
         }
     }
@@ -223,16 +280,16 @@ nav{
             text-align: center;
             flex-direction: column;
             align-items: center;
-            gap: 20px;
+            .work-image {
+                width: 60%;
+                height: 60%;
+            }
 
-            img {
-                width: 300px;
-                height: 400px;
-
-                @for $i from 1 through length($work-frames-color) {
-                    &:nth-child(#{$i}) {
-                        border: 8px solid nth($work-frames-color, $i);
-                    }
+            .work-btn{
+                &:hover{
+                    background-color: #6e5494;
+                    color: white;
+                    transform: scale(1.1);
                 }
             }
 
@@ -271,10 +328,17 @@ nav{
 
     .contact-container {
         
+        .contact-btn{
+            &:hover{
+                background-color: #4073a3;
+                color: white;
+                transform: scale(1.1);
+            }
+        }
         .contact-form{
             .input-form {
                 margin-top: 40px;
-                width: 78%;
+                width: 90%;
                 height: 50px;
                 font-size: 20px;
                 font-weight: 400;
@@ -417,7 +481,6 @@ footer{
 }
 
 @media screen and (min-width: 1024px) {
-
     nav{
         ul{
             li{
@@ -439,7 +502,7 @@ footer{
     }
 
     .section{
-        margin-left: 150px;
+        margin-left: 200px;
         text-align: unset;
     }
 
@@ -459,13 +522,18 @@ footer{
             .about-resume{
                 text-align: center;
                 font-size: 20px;
+                display: flex;
+                flex-direction: row;
+                span{
+                    visibility: visible;
+                }
             }
         }
     }
 
     .skills-section{
         display: block ;
-        text-align: unset;
+        text-align: unset ;
         .grid-skills{
             grid-template-columns: repeat(6, 1fr);
             margin-right: 250px ;
@@ -479,6 +547,9 @@ footer{
                 font-size: 25px;
             }
         }
+        p{
+            text-align: unset;
+        }
     }
 
     .work-section{
@@ -487,6 +558,8 @@ footer{
                 flex-direction: row !important;
                 .work-text{
                     p{
+                        width: 80%;
+                        font-size: 20px;
                         text-align: left;
                     }
                 }
