--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -116,7 +116,9 @@ nav{
     position: sticky;
     top: 0;
     width: 100%;
-    height: 100px;
+    height: 70px;
+    background-color: #808080;
+    z-index: 99;
     ul{
         display: flex;
         justify-content: center;
@@ -128,7 +130,7 @@ nav{
             font-weight: 400;
         
             a{
-                color: #ffffff;
+                color: white;
                 text-decoration: underline 3px rgba(251, 35, 118,0);
                 text-underline-offset: 10px;
                 transition: text-decoration-color 0.7s;
@@ -185,6 +187,7 @@ nav{
         gap: 50px;
 
         img{
+            
             width: 250px;
             height: 250px;
             border-radius: 50%;
@@ -242,6 +245,7 @@ nav{
         gap: 40px 0px;
         .grid-skills-item{
             img{
+                
                 width: 35px;
                 height: 35px;
                 margin: auto;
@@ -309,8 +313,8 @@ nav{
                     width: 100%;
                     text-align: center;
                     margin-top: 20px;
-                    font-size: 20px;
-                    font-weight: 400;
+                    font-size: 16   px;
+                    font-weight: 300;
                     line-height: 40px;
                 } 
             }
@@ -425,6 +429,7 @@ footer{
     .about-section{
         .about-wrapper{
             img{
+                
                 width: 270px;
                 height: 270px;
             }
@@ -445,6 +450,7 @@ footer{
             grid-template-columns: repeat(5, 1fr);
             .grid-skills-item{
                 img{
+                    
                     width: 70px !important;
                     height: 70px !important;
                 }
@@ -472,6 +478,7 @@ footer{
                     }
                 }
                 img{
+                    
                     width: 469px;
                     height: 550px;
                 }
@@ -510,6 +517,7 @@ footer{
         .about-wrapper{
             flex-direction: row;
             img{
+                
                 width: 350px;
                 height: 350px;
             }
@@ -517,7 +525,7 @@ footer{
                 p{
                     font-size: 25px;
                 }
-            }
+            }   
 
             .about-resume{
                 text-align: center;
